[build-system]
requires = [
	"setuptools>=42",
	"wheel"
]
build-backend = "setuptools.build_meta"


[tool.ruff]
exclude = [
    ".venv",
	"build",
    ".git",
]
select = [
    "F", "E", "W", "C90"
]
ignore = ["C901"]
line-length = 120
[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-annotations]
mypy-init-return = false