[metadata]
name = panther
version = 0.0.1
author = Ali RajabNezhad
author_email = alirn76@yahoo.com
description = Fast, Friendly Python Web Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alirn76/panther
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = panther
packages = find:
python_requires = >=3.10

[options.packages.find]
where = panther
